# mcp-webexcalling

./: .env.example  .gitignore  OAUTH.md  README.md  SETUP.md  USAGE.md  pyproject.toml  requirements.txt  test_call_history.py  test_endpoint_discovery.py
.github/workflows/: main.yml  webex-notifications.yml
examples/: __init__.py  basic_usage.py
mcp_webexcalling/: __init__.py  area_codes.py  config.py  oauth.py  server.py  webex_client.py
tests/: test_config.py  test_webex_client.py
